--- a/about.html
+++ b/about.html
@@ -98,11 +98,11 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR&nbsp;</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">MİSYONUMUZ</a>
+                        <a href="feature.html" class="dropdown-item ">MİSYONUMUZ</a>
                         <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a>
-                        <a href="appointment.html" class="dropdown-item">RANDEVU</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="appointment.html" class="dropdown-item ">RANDEVU</a>
+                        <a href="announcements.html" class="dropdown-item ">DUYURULAR</a>
+                        <a href="statistics.html" class="dropdown-item">İSTATİSTİKLER</a>
                     </div>
            	  </div>
                 <a href="contact.html" class="nav-item nav-link">İLETİŞİM</a>
@@ -303,59 +303,39 @@
         
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container py-5">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h5 class="text-light mb-4">Adres</h5>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kabaoğlu, Baki Komsuoğlu bulvarı No:515, Umuttepe, 41001 İzmit/Kocaeli</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+90 553 901 4553</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-          <div class="col-lg-3 col-md-6">
-            <h5 class="text-light mb-4">Birimler</h5>
-              <a class="btn btn-link" href="cardiology.html">Kardiyoloji</a>
-              <a class="btn btn-link" href="pulmonary.html">Göğüs Hastalıkaları</a>
-              <a class="btn btn-link" href="neurology.html">Nöroloji</a>
-              <a class="btn btn-link" href="orthopedics.html">Ortopedi</a>
-              <a class="btn btn-link" href="laboratory.html">Laboratuvar</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h5 class="text-light mb-4">Hızlı Bağlantılar</h5>
-                <a class="btn btn-link" href="about.html">Hakkımızda</a>
-                <a class="btn btn-link" href="contact.html">Bize Ulaşın</a>
-                <a class="btn btn-link" href="service.html">Birimlerimiz</a>
-                <a class="btn btn-link" href="">Şartlar & Koşullar</a>
-                <a class="btn btn-link" href="">Destek</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <h5 class="text-light mb-4">Bülten</h5>
-                <p>Sağlık ipuçları, özel kampanyalar ve etkinlikler hakkında bilgi almak için e-posta adresinizi bırakın.</p>
-                <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="E-posta adresiniz">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Kaydol</button>
-              </div>
-            </div>
+<div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+  <div class="container py-5">
+    <div class="row g-5">
+      <div class="col-lg-3 col-md-6">
+        <h5 class="text-light mb-4">Adres</h5>
+        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kabaoğlu, Baki Komsuoğlu bulvarı No:515, Umuttepe, 41001 İzmit/Kocaeli</p>
+        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+90 553 901 4553</p>
+        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ceylanklinik.com</p>
+        <div class="d-flex pt-2"> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-twitter"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a> </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <h5 class="text-light mb-4">Birimler</h5>
+        <a class="btn btn-link" href="cardiology.html">Kardiyoloji</a> <a class="btn btn-link" href="pulmonary.html">Göğüs Hastalıkaları</a> <a class="btn btn-link" href="neurology.html">Nöroloji</a> <a class="btn btn-link" href="orthopedics.html">Ortopedi</a> <a class="btn btn-link" href="laboratory.html">Laboratuvar</a> </div>
+      <div class="col-lg-3 col-md-6">
+        <h5 class="text-light mb-4">Hızlı Bağlantılar</h5>
+        <a class="btn btn-link" href="about.html">Hakkımızda</a> <a class="btn btn-link" href="contact.html">Bize Ulaşın</a> <a class="btn btn-link" href="service.html">Birimlerimiz</a> <a class="btn btn-link" href="">Şartlar & Koşullar</a> <a class="btn btn-link" href="">Destek</a> </div>
+      <div class="col-lg-3 col-md-6">
+        <h5 class="text-light mb-4">Bülten</h5>
+        <p>Sağlık ipuçları, özel kampanyalar ve etkinlikler hakkında bilgi almak için e-posta adresinizi bırakın.</p>
+        <div class="position-relative mx-auto" style="max-width: 400px;">
+          <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="E-posta adresiniz">
+          <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Kaydol</button>
         </div>
+      </div>
     </div>
-    <div class="container">
-        <div class="copyright">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Ceylan Klinik</a>, Tüm Hakları Saklıdır.
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                </div>
-            </div>
-        </div>
+  </div>
+  <div class="container">
+    <div class="copyright">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0"> &copy; <a class="border-bottom" href="#">Ceylan Klinik</a>, Tüm Hakları Saklıdır. </div>
+      </div>
     </div>
+  </div>
 </div>
 
     <!-- Footer End -->
