--- a/announcements.html
+++ b/announcements.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Duyurular - Ceylan Klinik</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -41,7 +41,6 @@
     </div>
     <!-- Spinner End -->
 
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
@@ -71,7 +70,6 @@
     </div>
     <!-- Topbar End -->
 
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -84,137 +82,108 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link ">ANASAYFA</a>
                 <a href="about.html" class="nav-item nav-link">HAKKIMIZDA</a>
-				<div class="nav-item dropdown">
-                  <a href="service.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">BİRİMLER&nbsp;</a>
+                <div class="nav-item dropdown">
+                    <a href="service.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">BİRİMLER&nbsp;</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                      <a href="cardiology.html" class="dropdown-item">Kardiyoloji</a>
-                      <a href="neurology.html" class="dropdown-item">Nöroloji</a>
-                      <a href="pulmonary.html" class="dropdown-item">Göğüs Hastalıkları</a>
-                      <a href="orthopedics.html" class="dropdown-item">Ortopedi</a>
-                      <a href="dental.html" class="dropdown-item">Diş</a>
-						<a href="laboratory.html" class="dropdown-item">Laboratuvar</a>
+                        <a href="cardiology.html" class="dropdown-item">Kardiyoloji</a>
+                        <a href="neurology.html" class="dropdown-item">Nöroloji</a>
+                        <a href="pulmonary.html" class="dropdown-item">Göğüs Hastalıkları</a>
+                        <a href="orthopedics.html" class="dropdown-item">Ortopedi</a>
+                        <a href="dental.html" class="dropdown-item">Diş</a>
+                        <a href="laboratory.html" class="dropdown-item">Laboratuvar</a>
                     </div>
-              	</div>
+                </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SAYFALAR&nbsp;</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="feature.html" class="dropdown-item ">MİSYONUMUZ</a>
                         <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a>
-                        <a href="appointment.html" class="dropdown-item active">RANDEVU</a>
-                        <a href="announcements.html" class="dropdown-item ">DUYURULAR</a>
+                        <a href="appointment.html" class="dropdown-item">RANDEVU</a>
+                        <a href="announcements.html" class="dropdown-item active">DUYURULAR</a>
                         <a href="statistics.html" class="dropdown-item">İSTATİSTİKLER</a>
                     </div>
-           	  </div>
+                </div>
                 <a href="contact.html" class="nav-item nav-link">İLETİŞİM</a>
-          </div>
-            <a href="appointment.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">RANDEVU<br>
-            </a>
+            </div>
+            <a href="appointment.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">RANDEVU<br></a>
         </div>
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Randevu</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Duyurular</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Anasayfa</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">sayfalar</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">randevu</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Sayfalar</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Duyurular</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Appointment Start -->
+    <!-- Duyurular Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4">Randevu</p>
-                    <h1 class="mb-4">Doktorlarımıza Görünmek İçin Randevu Alın&nbsp;&nbsp;</h1>
-                    <p class="mb-4">Sağlığınız için doğru adrestesiniz. Doktorlarımızla randevu almak için formu doldurun, hızlı bir şekilde geri dönüş yapalım.</p>
-                    <div class="bg-light rounded d-flex align-items-center p-5 mb-4">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Bizi Şimdi Arayın</p>
-                            <h5 class="mb-0">+90 553 901 4553</h5>
-                        </div>
-                    </div>
-                    <div class="bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Bize Mail Gönderin</p>
-                            <h5 class="mb-0">info@ceylanklinik.com</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="bg-light rounded h-100 d-flex align-items-center p-5">
-                        <form>
-							<div class="row g-3">
-								<div class="col-12 col-sm-6">
-									<input type="text" class="form-control border-0" placeholder="Ad Soyad" style="height: 55px;">
-								</div>
-								<div class="col-12 col-sm-6">
-									<input type="email" class="form-control border-0" placeholder="Email Adresiniz" style="height: 55px;">
-								</div>
-								<div class="col-12 col-sm-6">
-									<input type="text" class="form-control border-0" placeholder="Telefon Numaranız" style="height: 55px;">
-								</div>
-								<div class="col-12 col-sm-6">
-									<select id="department" class="form-select border-0" style="height: 55px;">
-										<option selected>Bölüm Seçin</option>
-										<option value="kardiyoloji">Kardiyoloji</option>
-										<option value="noroloji">Nöroloji</option>
-										<option value="gögüs">Göğüs Hastalıkları</option>
-										<option value="ortopedi">Ortopedi</option>
-										<option value="dis">Diş</option>
-										<option value="laboratuvar">Laboratuvar</option>
-									</select>
-								</div>
-								<div class="col-12 col-sm-6">
-									<select id="doctor" class="form-select border-0" style="height: 55px;">
-										<option selected>Doktor Seçin</option>
-									</select>
-								</div>
-								<div class="col-12 col-sm-6">
-									<div class="date" id="date" data-target-input="nearest">
-										<input type="text"
-											class="form-control border-0 datetimepicker-input"
-											placeholder="Tarih Seçin" data-target="#date" data-toggle="datetimepicker" style="height: 55px;">
-									</div>
-								</div>
-								<div class="col-12 col-sm-6">
-									<div class="time" id="time" data-target-input="nearest">
-										<input type="text"
-											class="form-control border-0 datetimepicker-input"
-											placeholder="Saat Seçin" data-target="#time" data-toggle="datetimepicker" style="height: 55px;">
-									</div>
-								</div>
-								<div class="col-12">
-									<textarea class="form-control border-0" rows="5" placeholder="Sorununuzu Açıklayın"></textarea>
-								</div>
-								<div class="col-12">
-									<button class="btn btn-primary w-100 py-3" type="submit">Randevu Al</button>
-								</div>
-							</div>
-						</form>
-                    </div>
-                </div>
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <p class="d-inline-block border rounded-pill py-1 px-4">Duyurular</p>
+                <h1>Hastanemizden Son Gelişmeler</h1>
             </div>
+
+            <div class="mb-4">
+                <h4>Yeni Doktorlarımız Aramıza Katıldı!</h4>
+                <p>Hastanemize yeni kardiyoloji uzmanlarımız katıldı. Artık daha hızlı ve kaliteli hizmet alabilirsiniz.</p>
+            </div>
+
+            <div class="mb-4">
+                <h4>İletişim Formu Güncellendi</h4>
+                <p>İletişim formumuz artık daha kolay bir şekilde ulaşılabilir durumda. Bizimle daha hızlı iletişime geçebilirsiniz.</p>
+            </div>
+
+            <div class="mb-4">
+                <h4>Yeni Laboratuvar Hizmetleri</h4>
+                <p>Laboratuvar hizmetlerimize yeni testler eklenmiştir. Artık daha kapsamlı testler yapabilirsiniz.</p>
+            </div>
+			<div class="mb-4">
+            <h4>Sağlık Sigortası Anlaşmaları Güncellendi</h4>
+            <p>Birçok sağlık sigortası şirketiyle anlaşmalarımızı güncelledik. Sigortalı hastalarımıza daha fazla imkan sunuyoruz.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>Yeni Ücret Tarifeleri</h4>
+            <p>Hastanemizin yeni ücret tarifeleri, daha uygun fiyatlarla kaliteli hizmet sunmaya yönelik olarak belirlenmiştir.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>COVID-19 Önlemleri Güncellendi</h4>
+            <p>Hastanemizde COVID-19 önlemleri güncellenmiştir. Lütfen tüm hastalarımızın sağlık güvenliğine dikkat ediniz.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>Sağlık Eğitimi Seminerleri Başladı</h4>
+            <p>Hastanemiz, sağlık bilincini artırmak amacıyla seminerler düzenlemeye başlamıştır. Katılmak için bizimle iletişime geçebilirsiniz.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>Randevu Sistemi Güncellendi</h4>
+            <p>Randevu sistemimiz artık daha hızlı ve kullanıcı dostu bir hale geldi. Randevu almak için web sitemiz üzerinden işlem yapabilirsiniz.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>Yaz Tatili Duyurusu</h4>
+            <p>Yaz tatili dönemi nedeniyle bazı bölümlerimizde hizmet saatlerinde değişiklikler olabilir. Lütfen güncel bilgileri kontrol edin.</p>
+        </div>
+
+        <div class="mb-4">
+            <h4>Yenilikçi Fiziksel Tedavi Yöntemleri</h4>
+            <p>Fiziksel tedavi bölümümüzde yenilikçi yöntemler kullanılmaya başlanmıştır. Daha hızlı iyileşme için bizimle iletişime geçebilirsiniz.</p>
+        </div>
         </div>
     </div>
-    <!-- Appointment End -->
-        
+    <!-- Duyurular End -->
 
     <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -251,24 +220,19 @@
     </div>
   </div>
 </div>
-
     <!-- Footer End -->
 
-
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-
+    <a href="#" class="btn btn-primary btn-lg btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
