--- a/cardiology.html
+++ b/cardiology.html
@@ -64,7 +64,7 @@
         <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="cardiology.html" class="dropdown-item active">Kardiyoloji</a> <a href="neurology.html" class="dropdown-item">Nöroloji</a> <a href="pulmonary.html" class="dropdown-item">Göğüs Hastalıkları</a> <a href="orthopedics.html" class="dropdown-item">Ortopedi</a> <a href="dental.html" class="dropdown-item">Diş</a> <a href="laboratory.html" class="dropdown-item">Laboratuvar</a> </div>
       </div>
       <div class="nav-item dropdown"> <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR&nbsp;</a>
-        <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="feature.html" class="dropdown-item">MİSYONUMUZ</a> <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a> <a href="appointment.html" class="dropdown-item">RANDEVU</a> <a href="testimonial.html" class="dropdown-item">Testimonial</a> <a href="404.html" class="dropdown-item">404 Page</a> </div>
+        <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="feature.html" class="dropdown-item ">MİSYONUMUZ</a> <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a> <a href="appointment.html" class="dropdown-item ">RANDEVU</a> <a href="announcements.html" class="dropdown-item ">DUYURULAR</a> <a href="statistics.html" class="dropdown-item">İSTATİSTİKLER</a> </div>
       </div>
       <a href="contact.html" class="nav-item nav-link">İLETİŞİM</a> </div>
     <a href="appointment.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">RANDEVU<br>
@@ -179,7 +179,7 @@
           <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;"> <i class="fa fa-envelope-open text-primary"></i> </div>
           <div class="ms-4">
             <p class="mb-2">Bize Mail Gönderin</p>
-            <h5 class="mb-0">info@example.com</h5>
+            <h5 class="mb-0">info@ceylanklinik.com</h5>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
         <h5 class="text-light mb-4">Adres</h5>
         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kabaoğlu, Baki Komsuoğlu bulvarı No:515, Umuttepe, 41001 İzmit/Kocaeli</p>
         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+90 553 901 4553</p>
-        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ceylanklinik.com</p>
         <div class="d-flex pt-2"> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-twitter"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a> </div>
       </div>
       <div class="col-lg-3 col-md-6">
@@ -257,7 +257,6 @@
     <div class="copyright">
       <div class="row">
         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0"> &copy; <a class="border-bottom" href="#">Ceylan Klinik</a>, Tüm Hakları Saklıdır. </div>
-        <div class="col-md-6 text-center text-md-end"> Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> </div>
       </div>
     </div>
   </div>
