--- a/statistics.html
+++ b/statistics.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="utf-8">
-<title>Klinik - Clinic Website Template</title>
+<title>Ceylan Klinik</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -34,7 +34,7 @@
 <body>
 <!-- Spinner Start -->
 <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-  <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status"> <span class="sr-only">Loading...</span> </div>
+  <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status"> <span class="sr-only">Yükleniyor...</span> </div>
 </div>
 <!-- Spinner End --> 
 
@@ -59,118 +59,104 @@
   </a>
   <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <div class="navbar-nav ms-auto p-4 p-lg-0"> <a href="index.html" class="nav-item nav-link ">ANASAYFA</a> <a href="about.html" class="nav-item nav-link">HAKKIMIZDA</a>
+    <div class="navbar-nav ms-auto p-4 p-lg-0"> <a href="index.html" class="nav-item nav-link">ANASAYFA</a> <a href="about.html" class="nav-item nav-link">HAKKIMIZDA</a>
       <div class="nav-item dropdown"> <a href="service.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">BİRİMLER&nbsp;</a>
         <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="cardiology.html" class="dropdown-item">Kardiyoloji</a> <a href="neurology.html" class="dropdown-item">Nöroloji</a> <a href="pulmonary.html" class="dropdown-item">Göğüs Hastalıkları</a> <a href="orthopedics.html" class="dropdown-item">Ortopedi</a> <a href="dental.html" class="dropdown-item">Diş</a> <a href="laboratory.html" class="dropdown-item">Laboratuvar</a> </div>
       </div>
       <div class="nav-item dropdown"> <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR&nbsp;</a>
-        <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="feature.html" class="dropdown-item ">MİSYONUMUZ</a> <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a> <a href="appointment.html" class="dropdown-item ">RANDEVU</a> <a href="announcements.html" class="dropdown-item">DUYURULAR</a> <a href="statistics.html" class="dropdown-item">İSTATİSTİKLER</a> </div>
+        <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="feature.html" class="dropdown-item">MİSYONUMUZ</a> <a href="team.html" class="dropdown-item">DOKTORLARIMIZ</a> <a href="appointment.html" class="dropdown-item">RANDEVU</a> <a href="announcements.html" class="dropdown-item">DUYURULAR</a> <a href="statistics.html" class="dropdown-item active">İSTATİSTİKLER</a> </div>
       </div>
-      <a href="contact.html" class="nav-item nav-link active">İLETİŞİM</a> </div>
+      <a href="contact.html" class="nav-item nav-link">İLETİŞİM</a> </div>
     <a href="appointment.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">RANDEVU<br>
     </a> </div>
 </nav>
-<!-- Navbar End --> 
+    <!-- Navbar End -->
 
-<!-- Page Header Start -->
-<div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-  <div class="container py-5">
-    <h1 class="display-3 text-white mb-3 animated slideInDown">İletişime Geç</h1>
-    <nav aria-label="breadcrumb animated slideInDown">
-      <ol class="breadcrumb text-uppercase mb-0">
-        <li class="breadcrumb-item"><a class="text-white" href="index.html">ANASAYFA</a></li>
-        <li class="breadcrumb-item"><a class="text-white" href="#">SAYFALAR</a></li>
-        <li class="breadcrumb-item text-primary active" aria-current="page">İLETİŞİM</li>
-      </ol>
-    </nav>
-  </div>
-</div>
-<!-- Page Header End --> 
 
-<!-- İletişim Start -->
-<div class="container-xxl py-5">
-  <div class="container">
-    <div class="row g-4">
-      <div class="col-lg-4">
-        <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-          <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;"> <i class="fa fa-map-marker-alt text-primary"></i> </div>
-          <div class="ms-4">
-            <p class="mb-2">Adres</p>
-            <h5 class="mb-0">Kabaoğlu, Baki Komsuoğlu bulvarı No:515, Umuttepe, 41001 İzmit/Kocaeli</h5>
-          </div>
+    <!-- Page Header Start -->
+    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <h1 class="display-3 text-white mb-3 animated slideInDown">İstatistikler&nbsp;</h1>
+            <nav aria-label="breadcrumb animated slideInDown">
+                <ol class="breadcrumb text-uppercase mb-0">
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">anasayfa</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">sayfalar</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">istatistikler</li>
+                </ol>
+            </nav>
         </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-          <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;"> <i class="fa fa-phone-alt text-primary"></i> </div>
-          <div class="ms-4">
-            <p class="mb-2">Bizi  arayın&nbsp;</p>
-            <h5 class="mb-0">+90 553 901 4553</h5>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-          <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;"> <i class="fa fa-envelope-open text-primary"></i> </div>
-          <div class="ms-4">
-            <p class="mb-2">Bize mail gönderin</p>
-            <h5 class="mb-0">info@ceylanklinik.com</h5>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-        <div class="bg-light rounded p-5">
-          <p class="d-inline-block border rounded-pill py-1 px-4">İletişime Geç&nbsp;</p>
-          <h1 class="mb-4">Herhangi Bir Sorunuz Mu Var? Lütfen Bizimle İletişime Geçin!</h1>
-          <p class="mb-4">Sorularınızı, geri bildirimlerinizi veya taleplerinizi bize gönderebilirsiniz. En kısa sürede size geri dönüş yapacağımızdan emin olabilirsiniz.</p>
-          <form>
-            <div class="row g-3">
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" class="form-control" id="name" placeholder="Adınız">
-                  <label for="name">Adınız</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="email" class="form-control" id="email" placeholder="E-posta Adresiniz">
-                  <label for="email">E-posta Adresiniz</label>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="form-floating">
-                  <input type="text" class="form-control" id="subject" placeholder="Konu">
-                  <label for="subject">Konu</label>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="form-floating">
-                  <textarea class="form-control" placeholder="Mesajınızı Buraya Yazın" id="message" style="height: 100px"></textarea>
-                  <label for="message">Mesaj</label>
-                </div>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary w-100 py-3" type="submit">Mesajı Gönder</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-        <div class="h-100" style="min-height: 400px;">
-          <iframe class="rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6038.628935572173!2d29.9221491!3d40.8210559!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb5badf629fe45%3A0xc81fa849234e8755!2sKocaeli%20%C3%9Cniversitesi!5e0!3m2!1str!2str!4v1729512557885!5m2!1str!2str"
-
-                        frameborder="0" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-        </div>
-      </div>
     </div>
-  </div>
-</div>
-<!-- İletişim End --> 
+    <!-- Page Header End -->
 
-<!-- Footer Start -->
+
+<div class="container-fluid header bg-primary p-0 mb-5">
+    <div class="row g-0 align-items-center">
+        <div class="col-lg-12 p-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="row g-4 text-center">
+                <!-- Uzman Doktorlar -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">34</h2>
+                        <p class="text-light mb-0">Uzman Doktorlar</p>
+                  </div>
+                </div>
+                <!-- Oda Sayısı -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">500</h2>
+                        <p class="text-light mb-0">Oda Sayısı</p>
+                    </div>
+                </div>
+                <!-- Toplam Hastalar -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">10835</h2>
+                        <p class="text-light mb-0">Toplam Hastalar</p>
+                    </div>
+                </div>
+                <!-- Ameliyat Sayısı -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">720</h2>
+                        <p class="text-light mb-0">Başarılı Ameliyatlar</p>
+                    </div>
+                </div>
+                <!-- Günlük Muayene -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">250</h2>
+                        <p class="text-light mb-0">Günlük Muayene</p>
+                  </div>
+                </div>
+                <!-- Yıllık Yeni Kayıt -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">3200</h2>
+                        <p class="text-light mb-0">Yıllık Yeni Kayıt</p>
+                    </div>
+                </div>
+                <!-- Personel Sayısı -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">200</h2>
+                        <p class="text-light mb-0">Personel Sayısı</p>
+                    </div>
+                </div>
+                <!-- Departman Sayısı -->
+                <div class="col-sm-4 col-md-3">
+                    <div class="border-start border-light ps-4">
+                        <h2 class="text-white mb-1" data-toggle="counter-up">6</h2>
+                        <p class="text-light mb-0">Farklı Departmanlar</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+        
+
+    <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
   <div class="container py-5">
     <div class="row g-5">
@@ -206,24 +192,27 @@
   </div>
 </div>
 
-<!-- Footer End --> 
+    <!-- Footer End -->
 
-<!-- Back to Top --> 
-<a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a> 
 
-<!-- JavaScript Libraries --> 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script> 
-<script src="lib/wow/wow.min.js"></script> 
-<script src="lib/easing/easing.min.js"></script> 
-<script src="lib/waypoints/waypoints.min.js"></script> 
-<script src="lib/counterup/counterup.min.js"></script> 
-<script src="lib/owlcarousel/owl.carousel.min.js"></script> 
-<script src="lib/tempusdominus/js/moment.min.js"></script> 
-<script src="lib/tempusdominus/js/moment-timezone.min.js"></script> 
-<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script> 
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-<!-- Template Javascript --> 
-<script src="js/main.js"></script>
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
+
 </html>
