--- a/feature.html
+++ b/feature.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="utf-8">
-<title>Klinik - Clinic Website Template</title>
+<title>Misyonumuz - Ceylan Klinik</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
