--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,7 +18,7 @@
         <!-- Sol Menü -->
         <div class="left">
             <ul>
-                <li><a href="#urunler">Hizmetler</a></li>
+                <li><a href="#doktorlar">Doktorlar</a></li>
                 <li><a href="#birimler">Birimler</a></li>
                 <li><a href="#duyurular">Duyurular</a></li>
                 <li><a href="#rezervasyonlar">Randevular</a></li>
@@ -27,51 +27,51 @@
 
         <!-- Sağ İçerik -->
         <div class="right">
-            <!-- HİZMETLER -->
-            <div class="urunler" id="urunler">
-                <div class="urunler_container">
-                    <div class="header_urunler">
-                        <h1>Hizmetler</h1>
-                        <button class="add_button">+ Yeni Hizmet Ekle</button>
+            <!-- DOKTORLAR -->
+            <div class="doktorlar" id="doktorlar">
+                <div class="doktorlar_container">
+                    <div class="header_doktorlar">
+                        <h1>Doktorlar</h1>
+                        <button class="add_button">+ Yeni Doktor Ekle</button>
                         <div class="ekle_div">
                             <table>
                                 <tbody>
                                     <tr class="ekle">
-                                        <td><input type="text" name="hizmet_adi" id="hizmet_adi" placeholder="Hizmet Adı"></td>
-                                        <td><input type="text" name="kategori" id="kategori" placeholder="Kategori"></td>
+                                        <td><input type="text" name="doktor_adi" id="doktor_adi" placeholder="Doktor Adı"></td>
+                                        <td><input type="text" name="uzmanlik" id="uzmanlik" placeholder="Uzmanlık Alanı"></td>
                                         <td><input type="text" name="aciklama" id="aciklama" placeholder="Açıklama"></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div>
-                                <button class="urun_ekle_onay">Onayla</button>
+                                <button class="doktor_ekle_onay">Onayla</button>
                             </div>
                         </div>
                     </div>
-                    <div class="list_urunler">
+                    <div class="list_doktorlar">
                         <table>
                             <thead>
                                 <tr>
-                                    <th>Hizmet Adı</th>
-                                    <th>Kategori</th>
+                                    <th>Doktor Adı</th>
+                                    <th>Uzmanlık Alanı</th>
                                     <th>Açıklama</th>
                                     <th>İşlemler</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Diş Beyazlatma</td>
-                                    <td>Ağız ve Diş Sağlığı</td>
-                                    <td>Dişlerinizi 1 seansta beyazlatın.</td>
+                                    <td>Dr. Ahmet Yılmaz</td>
+                                    <td>Kardiyoloji</td>
+                                    <td>Kalp ve damar sağlığı alanında uzman.</td>
                                     <td>
                                         <button class="edit_button">Düzenle</button>
                                         <button class="delete_button">Sil</button>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Cilt Yenileme</td>
-                                    <td>Dermatoloji</td>
-                                    <td>Cildinizi gençleştirmek için profesyonel uygulamalar.</td>
+                                    <td>Dr. Elif Kaya</td>
+                                    <td>Nöroloji&nbsp;</td>
+                                    <td>Sinir sistemi alanında uzman</td>
                                     <td>
                                         <button class="edit_button">Düzenle</button>
                                         <button class="delete_button">Sil</button>
@@ -168,12 +168,12 @@
                             <tbody>
                                 <tr>
                                     <td>"Yılbaşı Tatil Duyurusu"</td>
-                                    <td>01.01.2025</td>
+                                    <td>01.08.2024</td>
                                     <td>Klinik, yılbaşı günü hizmet vermeyecektir.</td>
                                 </tr>
                                 <tr>
                                     <td>"Yeni Cihaz Tanıtımı"</td>
-                                    <td>15.01.2025</td>
+                                    <td>15.07.2024</td>
                                     <td>Lazer teknolojisiyle ilgili yeni cihazımız hizmetinizde!</td>
                                 </tr>
                             </tbody>
